--- a/src/components/List/List.wxml
+++ b/src/components/List/List.wxml
@@ -1,5 +1,5 @@
 <view class="list-box">
-  <view wx:for="{{list}}" class="list-item">
+  <view wx:for="{{list}}" wx:key="index" class="list-item">
     <!-- 封面 -->
     <image class="list-item-cover" src="{{ item.url || 'http://img1.imgtn.bdimg.com/it/u=1483917017,752494682&fm=26&gp=0.jpg'}}"></image>
     <!-- 歌单名 + 歌曲数量 -->
