--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -4,14 +4,30 @@
 }
 
 .header {
+  position: relative;
   width: 750rpx;
   height: 490rpx;
-  background-color: #EBF6F7;
+
+  &__bg {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 750rpx;
+    height: 490rpx;
+    -webkit-filter: blur(10rpx);
+    -moz-filter: blur(10rpx);
+    -ms-filter: blur(10rpx);
+    filter: blur(10rpx);
+    transform: scale(1.2);
+  }
 
   &__user-info {
+    position: absolute;
+    left: 0;
+    top: 0;
     width: 100%;
     height: 340rpx;
-    border-bottom: 1rpx solid #fff;
+    border-bottom: 1rpx solid #EBF6F7;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -33,22 +49,35 @@
   }
 
   &__bottom {
+    position: absolute;
+    left: 0;
+    bottom: 0;
     width: 100%;
     height: 150rpx;
     display: flex;
+    align-items: center;
 
     &-item {
       width: 50%;
       height: 100%;
       font-size: 32rpx;
       color: #A9C6DE;
-      line-height: 100rpx;
-      text-align: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-top: -40rpx;
+    }
+
+    &-item-icon {
+      width: 40rpx;
+      height: 44rpx;
+      margin-right: 10rpx;
     }
   }
 }
 
 .footer {
+  z-index: 9;
   width: 750rpx;
   background-color: #fff;
   margin-top: -40rpx;
@@ -63,6 +92,7 @@
     border-bottom: 1rpx solid rgba(121, 121, 121, .1);
 
     &-item {
+      background-color: #fff;
       width: 50%;
       height: 100%;
       font-size: 32rpx;
