fix：修改高斯模糊样式

--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -1,24 +1,26 @@
 .home-page {
   width: 750rpx;
   height: 100vh;
+  overflow: hidden;
 }
 
 .header {
   position: relative;
   width: 750rpx;
   height: 490rpx;
+  overflow: hidden;
 
   &__bg {
     position: absolute;
     left: 0;
     top: 0;
-    width: 750rpx;
-    height: 490rpx;
-    -webkit-filter: blur(10rpx);
-    -moz-filter: blur(10rpx);
-    -ms-filter: blur(10rpx);
-    filter: blur(10rpx);
-    transform: scale(1.2);
+    width: 760rpx;
+    height: 500rpx;
+    -webkit-filter: blur(8rpx);
+    -moz-filter: blur(8rpx);
+    -ms-filter: blur(8rpx);
+    filter: blur(8rpx);
+    transform: scale(1.4);
   }
 
   &__user-info {
