--- a/src/components/PlayControllerBar/PlayControllerBar.less
+++ b/src/components/PlayControllerBar/PlayControllerBar.less
@@ -47,8 +47,13 @@
   width: 160rpx;
   height: 78rpx;
 
-  view {
-    width: 60rpx;
-    height: 60rpx;
+  image {
+    width: 48rpx;
+    height: 48rpx;
+  }
+
+  :nth-last-child(1) {
+    width: 54rpx;
+    height: 54rpx;
   }
 }
