--- a/src/components/PlayControllerBar/PlayControllerBar.wxml
+++ b/src/components/PlayControllerBar/PlayControllerBar.wxml
@@ -1,7 +1,6 @@
 <view class="play-controller-box">
   <!-- 封面 -->
-  <image class="play-controller-cover" src="http://img1.imgtn.bdimg.com/it/u=1483917017,752494682&fm=26&gp=0.jpg">
-  </image>
+  <image class="play-controller-cover" src="http://img1.imgtn.bdimg.com/it/u=1483917017,752494682&fm=26&gp=0.jpg"></image>
   <!-- 歌曲名 + 歌手名称 -->
   <view class="play-controller-content">
     <view class="play-controller-content__song">歌曲名</view>
@@ -9,7 +8,9 @@
   </view>
   <!-- 播放控制图标 + 显示列表图标按钮 -->
   <view class="play-controller-btns">
-    <view>btn1</view>
-    <view>btn2</view>
+    <image wx:if="{{isPlay}}" bindtap="changePlayStatus" src="http://134.175.150.88:4001/icons/my_page/play.png" />
+    <image wx:else bindtap="changePlayStatus" src="http://134.175.150.88:4001/icons/my_page/pause.png" />
+    <!-- 播放列表图标按钮 -->
+    <image src="http://134.175.150.88:4001/icons/my_page/music_list.png" />
   </view>
 </view>
