--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -7,7 +7,7 @@
 .header {
   position: relative;
   width: 750rpx;
-  height: 490rpx;
+  height: 520rpx;
   overflow: hidden;
 
   &__bg {
@@ -29,7 +29,6 @@
     top: 0;
     width: 100%;
     height: 340rpx;
-    border-bottom: 1rpx solid #EBF6F7;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -50,6 +49,12 @@
     }
   }
 
+  &__nickname {
+    font-size: 40rpx;
+    text-shadow: 3rpx 3rpx 1rpx rgba(125, 125, 125, 0.9);
+    color: #000;
+  }
+
   &__bottom {
     position: absolute;
     left: 0;
@@ -58,12 +63,14 @@
     height: 150rpx;
     display: flex;
     align-items: center;
+    background-color: rgba(0, 0, 0, .1);
+    border-top: 1rpx solid rgba(242, 242, 242, .3);
 
     &-item {
       width: 50%;
       height: 100%;
       font-size: 32rpx;
-      color: #A9C6DE;
+      color: #fff;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -71,8 +78,8 @@
     }
 
     &-item-icon {
-      width: 40rpx;
-      height: 44rpx;
+      width: 48rpx;
+      height: 48rpx;
       margin-right: 10rpx;
     }
   }
