fix：个人页面添加登录授权按钮

--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -85,6 +85,24 @@
   }
 }
 
+.authorize-btn {
+  margin-top: 100rpx;
+  width: 335rpx;
+  height: 88rpx;
+  background-color: #A9C6DE;
+  border-radius: 126rpx;
+  color: #fff;
+  font-size: 34rpx;
+  line-height: 88rpx;
+}
+
+.authorize-txt {
+  color: #949494;
+  font-size: 26rpx;
+  margin-top: 10rpx;
+}
+
+
 .footer {
   z-index: 9;
   width: 750rpx;
