fix：抽离组件内部定位父级

--- a/src/components/BaseList/BaseList.less
+++ b/src/components/BaseList/BaseList.less
@@ -8,9 +8,6 @@
 }
 
 .header {
-  position: fixed;
-  left: 0;
-  top: 0;
   box-sizing: border-box;
   padding: 17rpx 34rpx;
   width: 100%;
@@ -46,9 +43,7 @@
 .body {
   width: 750rpx;
   height: 90vh;
-  position: fixed;
-  left: 0;
-  top: 116rpx;
+  padding-bottom: 96rpx;
   overflow-y: scroll;
 
   .list-item {
@@ -78,8 +73,6 @@
       font-size: 22rpx;
       color: silver;
     }
-
-    &__info-song {}
 
     &__info-right {
       width: 42rpx;
