fix：添加清空按钮提示弹窗

--- a/src/components/BaseList/BaseList.wxml
+++ b/src/components/BaseList/BaseList.wxml
@@ -4,7 +4,7 @@
     <image class="header__play-icon" src="http://134.175.150.88:4001/icons/my_page/play.png" />
     <view class="header__counts">播放全部</view>
     <view class="header__counts-txt">(共{{count}}首)</view>
-    <view class="header__clear">清空</view>
+    <view class="header__clear" bindtap="clearAll">清空</view>
     <image class="header__select-icon" src="http://134.175.150.88:4001/icons/recent_play/multi_select.png"></image>
   </view>
   <!-- 列表 -->
