fix：完成全选逻辑判断

--- a/src/components/BaseList/BaseList.less
+++ b/src/components/BaseList/BaseList.less
@@ -7,6 +7,10 @@
   display: flex;
 }
 
+.m-left-17 {
+  margin-left: 17rpx;;
+}
+
 .header {
   box-sizing: border-box;
   padding: 17rpx 34rpx;
@@ -27,7 +31,7 @@
     flex-grow: 1;
   }
 
-  &__clear {
+  &__right-txt {
     color: #A9C6DE;
     font-size: 30rpx;
     margin-right: 10rpx;
@@ -36,7 +40,6 @@
   &__select-icon {
     width: 42rpx;
     height: 42rpx;
-    margin-left: 17rpx;
   }
 }
 
