--- a/src/components/BaseList/BaseList.wxml
+++ b/src/components/BaseList/BaseList.wxml
@@ -1,11 +1,18 @@
 <view class="base-list">
   <!-- 顶部播放 -->
-  <view class="header d-flex">
+  <view class="header d-flex" bindtap="hideAllRightSlide">
     <image class="header__play-icon" src="http://134.175.150.88:4001/icons/my_page/play.png" />
     <view class="header__counts">播放全部</view>
-    <view class="header__counts-txt">(共{{count}}首)</view>
-    <view class="header__clear" bindtap="clearAll">清空</view>
-    <image class="header__select-icon" src="http://134.175.150.88:4001/icons/recent_play/multi_select.png"></image>
+    <view class="header__counts-txt">(共{{lists.length}}首)</view>
+    <block wx:if="{{!showCheckbox}}">
+      <view class="header__right-txt" bindtap="clearAll">清空</view>
+      <image class="header__select-icon m-left-17" src="http://134.175.150.88:4001/icons/recent_play/multi_select.png" bindtap="toggleCheckboxs"></image>
+    </block>
+    <block wx:else>
+      <view class="header__right-txt" bindtap="toggleCheckboxs">关闭</view>
+      <view class="header__right-txt" style="color: silver;">全选</view>
+      <checkbox class="m-left-17" bindtap="selectAll" ckecked="{{ifSelectedAll}}"/>
+    </block>
   </view>
   <!-- 列表 -->
   <view class="body">
@@ -13,10 +20,11 @@
       <SlideView buttons="{{slideButtons}}" icon="{{true}}" show="{{item.showRight}}" data-index="{{index}}" bindshow="scrollShowHandle" bindbuttontap="slideButtonTap">
         <view class="list-item__info d-flex">
           <view class="list-item__info-left d-flex">
-            <view class="list-item__info-singer">知足</view>
-            <view class="list-item__info-song">五月天</view>
+            <view class="list-item__info-singer">{{item.name}}</view>
+            <view class="list-item__info-song">{{item.singer}}</view>
           </view>
-          <image class="list-item__info-right" src="http://134.175.150.88:4001/icons/recent_play/more_read.png"></image>
+          <image class="list-item__info-right" wx:if="{{!showCheckbox}}" src="http://134.175.150.88:4001/icons/recent_play/more_read.png"></image>
+          <checkbox value="{{item.name}}" wx:if="{{showCheckbox}}" checked="{{item.checked}}" />
         </view>
       </SlideView>
     </view>
