fix: 搜索历史缓存增加去重逻辑

--- a/src/pages/search/search.less
+++ b/src/pages/search/search.less
@@ -63,11 +63,11 @@
 .content-wrap {
   width: 100%;
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
 
   &__item {
     box-sizing: border-box;
+    margin-left: 16rpx;
     margin-top: 20rpx;
     padding: 10rpx 20rpx;
     background-color: #fff;
