--- a/src/pages/recommend/recommend.wxml
+++ b/src/pages/recommend/recommend.wxml
@@ -1,3 +1,47 @@
 <view class="recommend-page">
-  recommend-page
+  <view class="search-box">
+    <image class="icon" src="../../static/icons/search/search.png" />
+    <text>搜索</text>
+  </view>
+  <view class="hot-songs">
+    <view class="hot-songs__header header">
+      <view class="header-title">热门歌曲</view>
+      <view class="header-operate">
+        <text>更多</text>
+        <image class="icon" src="../../static/icons/recommend/more.png" />
+      </view>
+    </view>
+    <view class="hot-songs__body list">
+      <view class="hot-songs__list-item d-flex" wx:for="{{hotSongs}}" wx:key="index">
+        <image class="hot-songs__img" src="{{item.img}}" />
+        <view class="hot-songs__info">
+          <view class="hot-songs__song-name">{{item.songName}}</view>
+          <view class="hot-songs__singer">{{item.singer}}</view>
+        </view>
+        <image class="icon hot-songs__more" src="../../static/icons/recent_play/more_read.png" />
+      </view>
+    </view>
+  </view>
+  <view class="recommend-songs">
+    <view class="recommend-songs__header header">
+      <view class="header-title">推荐歌单</view>
+      <view class="header-operate header-operate-btn">换一批</view>
+    </view>
+    <view class="recommend-songs__body list d-flex">
+      <view class="recommend-songs__list-item" wx:for="{{recommendSongs}}" wx:key="index">
+        <view class="recommend-songs__item-header">
+          <image class="recommend-songs__img" src="{{item.img}}" />
+          <view class="recommend-songs__counts">
+            <image class="recommend-songs__play-icon" src="../../static/icons/recommend/play.png" />
+            {{item.counts}}
+          </view>
+        </view>
+        <view class="recommend-songs__name">{{item.name}}</view>
+      </view>
+      <view class="d-flex recommend-songs__more">
+        <text>更多</text>
+        <image class="icon" src="../../static/icons/recommend/more.png" />
+      </view>
+    </view>
+  </view>
 </view>
