fix：新增歌单页面顶部 UI

--- a/src/pages/recommend/recommend.less
+++ b/src/pages/recommend/recommend.less
@@ -124,6 +124,9 @@
   }
 
   &__play-icon {
+    position: absolute;
+    left: -30rpx;
+    bottom: 4rpx;
     width: 30rpx;
     height: 30rpx;
   }
