--- a/src/pages/recommend/recommend.less
+++ b/src/pages/recommend/recommend.less
@@ -1,14 +1,11 @@
+@import "../../common/less/util.less";
+
 .recommend-page {
   overflow: hidden;
   box-sizing: border-box;
   padding: 20rpx;
   width: 750rpx;
   background-color: #FAFAFA;
-}
-
-.icon {
-  width: 40rpx;
-  height: 40rpx;
 }
 
 .header {
@@ -39,27 +36,6 @@
     height: 38rpx;
     background-color: #fff;
     border-radius: 38rpx;
-  }
-}
-
-.d-flex {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.search-box {
-  width: 100%;
-  height: 88rpx;
-  border-radius: 50rpx;
-  background-color: #FFF;
-  text-align: center;
-  line-height: 88rpx;
-  font-size: 36rpx;
-  color: silver;
-
-  image {
-    transform: translate(-4rpx, 6rpx);
   }
 }
 
