--- a/src/pages/songSheet/songSheet.wxml
+++ b/src/pages/songSheet/songSheet.wxml
@@ -21,5 +21,7 @@
       </view>
     </view>
   </view>
-  <view class="song-sheet__list"></view>
+  <view class="song-sheet__list">
+    <BaseList />
+  </view>
 </view>
