fix：添加排行版 ui，各个页面添加播放器组件

--- a/src/common/less/util.less
+++ b/src/common/less/util.less
@@ -23,3 +23,9 @@
   align-items: center;
   justify-content: space-between;
 }
+
+.player-controller-wrapper {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+}
