--- a/src/pages/search/search.wxml
+++ b/src/pages/search/search.wxml
@@ -23,4 +23,8 @@
       <view class="content-wrap__item" wx:for="{{hotSearchList}}" wx:key="index">{{item}}</view>
     </view>
   </view>
+  <!-- 底部播放控制器 -->
+  <view class="player-controller-wrapper">
+    <play-controller-bar></play-controller-bar>
+  </view>
 </view>
