--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -1,3 +1,5 @@
+@import "../../common/less/util.less";
+
 .home-page {
   width: 750rpx;
   height: 100vh;
@@ -141,10 +143,4 @@
       }
     }
   }
-}
-
-.player-controller-wrapper {
-  position: fixed;
-  left: 0;
-  bottom: 0;
 }
