--- a/src/pages/rank/rank.wxml
+++ b/src/pages/rank/rank.wxml
@@ -1,11 +1,11 @@
 <view class="rank-page">
-  <view class="search-box">
+  <view class="search-box" bindtap="jumpSearchPage">
     <image class="icon" src="../../static/icons/search/search.png" />
     <text>搜索</text>
   </view>
   <view class="rank-title">排行榜</view>
   <view class="rank-list">
-    <view wx:for="{{ranklist}}" wx:key="index" class="d-flex rank-item">
+    <view wx:for="{{ranklist}}" wx:key="index" class="d-flex rank-item" bindtap="jumpRankDetailPage">
       <view class="rank-item__left">
         <image class="rank-item__left-cover" src="{{item.cover}}"/>
         <view class="rank-item__left-name">{{item.name}}</view>
