--- a/src/pages/recommend/recommend.less
+++ b/src/pages/recommend/recommend.less
@@ -5,6 +5,7 @@
   box-sizing: border-box;
   padding: 20rpx;
   width: 750rpx;
+  min-height: 100vh;
   background-color: #FAFAFA;
 }
 
@@ -140,4 +141,9 @@
       transform: rotateZ(90deg);
     }
   }
+}
+
+.null-block {
+  width: 100%;
+  height: 100rpx;
 }
