--- a/src/pages/recommend/recommend.wxml
+++ b/src/pages/recommend/recommend.wxml
@@ -28,7 +28,7 @@
       <!-- <view class="header-operate header-operate-btn">换一批</view> -->
     </view>
     <view class="recommend-songs__body list d-flex">
-      <view class="recommend-songs__list-item" wx:for="{{recommendSongs}}" wx:key="index" bindtap="jumpSongSheetPage">
+      <view class="recommend-songs__list-item" wx:for="{{recommendSongs}}" wx:key="index" data-id="{{item.id}}" bindtap="jumpSongSheetPage">
         <view class="recommend-songs__item-header">
           <image class="recommend-songs__img" src="{{item.coverImgUrl}}" />
           <view class="recommend-songs__counts">
@@ -39,8 +39,13 @@
         <view class="recommend-songs__name">{{item.name}}</view>
       </view>
       <view class="d-flex recommend-songs__more" bindtap="getHotList">
-        <text>更多</text>
-        <image class="icon" src="../../static/icons/recommend/more.png" />
+        <block wx:if="{{recommendSongsLoading}}">
+          <text>---- 正在加载中 ----</text>
+        </block>
+        <block wx:else>
+          <text>更多</text>
+          <image class="icon" src="../../static/icons/recommend/more.png" />
+        </block>
       </view>
     </view>
   </view>
