--- a/src/pages/songSheet/songSheet.less
+++ b/src/pages/songSheet/songSheet.less
@@ -2,11 +2,28 @@
   width: 750rpx;
 
   &__header {
+    position: relative;
     width: 100%;
     height: 520rpx;
-    background-color: #A9C6DE;
+    overflow: hidden;
   }
 
+  &__header-bg {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 520rpx;
+    z-index: -1;
+    transform: scale(1.2);
+    background-size: 100% 100%;
+    background-position: center;
+    -webkit-filter: blur(10px);
+    -moz-filter: blur(10px);
+    -ms-filter: blur(10px);
+    filter: blur(10px);
+  }
+  
   &__nav {
     box-sizing: border-box;
     padding-left: 14rpx;
