--- a/src/components/PlayControllerBar/PlayControllerBar.wxml
+++ b/src/components/PlayControllerBar/PlayControllerBar.wxml
@@ -1,4 +1,4 @@
-<view class="play-controller-box">
+<view class="play-controller-box" bindtap="jumpPlayerPage">
   <!-- 封面 -->
   <image class="play-controller-cover" src="http://img1.imgtn.bdimg.com/it/u=1483917017,752494682&fm=26&gp=0.jpg"></image>
   <!-- 歌曲名 + 歌手名称 -->
