fix：add play page

--- a/src/components/PlayControllerBar/PlayControllerBar.wxml
+++ b/src/components/PlayControllerBar/PlayControllerBar.wxml
@@ -1,4 +1,4 @@
-<view class="play-controller-box" bindtap="jumpPlayerPage">
+<view class="play-controller-box" catchtap="jumpPlayerPage">
   <!-- 封面 -->
   <image class="play-controller-cover" src="http://img1.imgtn.bdimg.com/it/u=1483917017,752494682&fm=26&gp=0.jpg"></image>
   <!-- 歌曲名 + 歌手名称 -->
@@ -9,8 +9,8 @@
   </view>
   <!-- 播放控制图标 + 显示列表图标按钮 -->
   <view class="play-controller-btns">
-    <image wx:if="{{musicInfo.status == 'off'}}" bindtap="changePlayStatus" src="../../static/icons/my_page/play.png" />
-    <image wx:else bindtap="changePlayStatus" src="../../static/icons/my_page/pause.png" />
+    <image wx:if="{{musicInfo.status == 'off'}}" catchtap="changePlayStatus" src="../../static/icons/my_page/play.png" />
+    <image wx:else catchtap="changePlayStatus" src="../../static/icons/my_page/pause.png" />
     <!-- 播放列表图标按钮 -->
     <image src="../../static/icons/my_page/music_list.png" />
   </view>
