--- a/src/pages/player/player.wxml
+++ b/src/pages/player/player.wxml
@@ -1,19 +1,40 @@
 <view class="player-page">
-  <image class="player-page__bg" src="{{musicInfo.coverImgUrl}}" />
+  <view class="player-page__bg-wrap">
+    <image class="player-page__bg" src="{{musicInfo.coverImgUrl}}" />
+  </view>
   <view class="player-page__main">
-    <view class="header"></view>
+    <view class="header">
+      <image class="icon" src="../../static/icons/play_list/back03.png" bindtap="navigateBack" />
+      <view class="nav-title">
+        <view class="nav-title__item">{{musicInfo.songName}}</view>
+        <view class="nav-title__item" style="font-size: 30rpx">{{musicInfo.singer}}</view>
+      </view>
+    </view>
     <view class="lyric">
-      <view style="width: 100%;height: 160rpx;"></view>
-      <view class="lyric-wrap" style="transform: translateY({{offsetTop}}rpx);">
+      <view style="width: 100%;height: 100rpx;"></view>
+      <view wx:if="{{lyricList.length}}" class="lyric-wrap" style="transform: translateY({{offsetTop}}rpx);">
         <view class="lyric-item {{currentIndex == index ? 'lyric-item__active' : ''}}" wx:for="{{lyricList}}" wx:key="index">
           {{item.text}}
         </view>
       </view>
+      <view wx:else class="lyric-wrap">暂无歌词</view>
     </view>
-    <view class="bottom"></view>
+    <view class="bottom">
+      <view class="process">
+        <view class="current-time">{{currentTime}}</view>
+        <view class="process-ani">
+          <view class="process-point"></view>
+          <view class="process-line"></view>
+        </view>
+        <view class="all-time">{{duration}}</view>
+      </view>
+      <view class="play-btns">
+        <image class="list-type-icon" wx:if="{{listPlayType == 0}}" src="{{listPlayType == 0 ? '../../static/icons/play/recycle_play.png' : (listPlayType == 1 ? '../../static/icons/play/one_recycle_play.png' : '../../static/icons/play/random_play.png')}}" />
+        <image class="change-list-icon prev-icon" src="../../static/icons/play/last_music01.png" />
+        <image class="play-icon" bindtap="changePlayStatus" src="{{musicInfo.status == 'on' ? '../../static/icons/play/stop.png' : '../../static/icons/play/play.png'}}" />
+        <image class="change-list-icon next-icon" src="../../static/icons/play/last_music01.png" />
+        <image class="list-icon" src="../../static/icons/play/music_list.png" />
+      </view>
+    </view>
   </view>
-  <view style="position:fixed;left: 0rpx;bottom: 40rpx;z-index: 1000;">
-    <play-controller-bar musicInfo="{{musicInfo}}"></play-controller-bar>
-  </view>
-  <!-- <share-mask></share-mask> -->
 </view>
