fix：完成播放页面逻辑

--- a/src/pages/player/player.less
+++ b/src/pages/player/player.less
@@ -4,6 +4,7 @@
   max-height: 100vh;
 
   &__bg-wrap {
+    background-color: rgba(0, 0, 0, .4);
     position: absolute;
     left: 0;
     top: 0;
@@ -76,7 +77,7 @@
   .lyric-item {
     text-align: center;
     color: #fff;
-    font-size: 40rpx;
+    font-size: 36rpx;
     line-height: 64rpx;
 
     &__active {
