--- a/src/pages/player/player.wxml
+++ b/src/pages/player/player.wxml
@@ -29,10 +29,12 @@
         <view class="all-time">{{duration}}</view>
       </view>
       <view class="play-btns">
-        <image class="list-type-icon" wx:if="{{listPlayType == 0}}" src="{{listPlayType == 0 ? '../../static/icons/play/recycle_play.png' : (listPlayType == 1 ? '../../static/icons/play/one_recycle_play.png' : '../../static/icons/play/random_play.png')}}" />
-        <image class="change-list-icon prev-icon" src="../../static/icons/play/last_music01.png" />
+        <image class="list-type-icon" bindtap="changeListPlayType" data-type="1" wx:if="{{listPlayType == 0}}" src="../../static/icons/play/recycle_play.png" />
+        <image class="list-type-icon" bindtap="changeListPlayType" data-type="2" wx:elif="{{listPlayType == 1}}" src="../../static/icons/play/one_recycle_play.png" />
+        <image class="list-type-icon" bindtap="changeListPlayType" data-type="0" wx:elif="{{listPlayType == 2}}" src="../../static/icons/play/random_play.png" />
+        <image class="change-list-icon prev-icon" src="../../static/icons/play/last_music01.png" bindtap="prevSong"/>
         <image class="play-icon" bindtap="changePlayStatus" src="{{musicInfo.status == 'on' ? '../../static/icons/play/stop.png' : '../../static/icons/play/play.png'}}" />
-        <image class="change-list-icon next-icon" src="../../static/icons/play/last_music01.png" />
+        <image class="change-list-icon next-icon" src="../../static/icons/play/last_music01.png" bindtap="nextSong"/>
         <image class="list-icon" src="../../static/icons/play/music_list.png" />
       </view>
     </view>
