--- a/src/pages/player/player.less
+++ b/src/pages/player/player.less
@@ -65,6 +65,15 @@
   flex-grow: 1;
   overflow: hidden;
 
+  .noop-lyric-wrap {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    font-size: 36rpx;
+  }
+
   .lyric-wrap {
     position: absolute;
     left: 0;
