--- a/src/pages/search/search.less
+++ b/src/pages/search/search.less
@@ -4,7 +4,6 @@
   box-sizing: border-box;
   padding: 20rpx;
   width: 750rpx;
-  height: 100vh;
   background-color: #FAFAFA;
 }
 
@@ -37,7 +36,8 @@
     width: 100%;
     height: 100%;
     text-align: left;
-    font-size: 36rpx;
+    font-size: 32rpx;
+    color: rgba(0, 0, 0, .8);
   }
 
   &__clear {
@@ -78,4 +78,11 @@
     border-radius: 30rpx;
     font-size: 30rpx;
   }
+}
+
+.list-wrap {
+  width: 750rpx;
+  margin-top: 20rpx;
+  transform: translateX(-20rpx);
+  border-top: 1rpx solid rgba(0, 0, 0, .1);
 }
