--- a/src/pages/rank/rank.less
+++ b/src/pages/rank/rank.less
@@ -6,7 +6,6 @@
   padding: 20rpx;
   width: 750rpx;
   background-color: #FAFAFA;
-  min-height: 100vh;
 }
 
 .rank-title {
@@ -65,4 +64,9 @@
     width: 100%;
     font-size: 32rpx;
   }
+}
+
+.null-block {
+  width: 100%;
+  height: 100rpx;
 }
