fix：歌曲播放页面添加黑色背景模糊层级

--- a/src/pages/player/player.less
+++ b/src/pages/player/player.less
@@ -14,6 +14,9 @@
   }
 
   &__bg {
+    position: absolute;
+    left: 0;
+    top: 0;
     width: 750rpx;
     height: 100vh;
     -webkit-filter: blur(32rpx);
@@ -21,6 +24,15 @@
     -ms-filter: blur(32rpx);
     filter: blur(32rpx);
     transform: scale(1.2);
+  }
+
+  &__bg-1 {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 750rpx;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, .2);
   }
 
   &__main {
