--- a/src/pages/songSheet/songSheet.less
+++ b/src/pages/songSheet/songSheet.less
@@ -119,3 +119,15 @@
   font-size: 36rpx;
   color: #fff;
 }
+
+.null-block {
+  width: 100%;
+  height: 100rpx;
+}
+
+.player-controller-wrapper {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  z-index: 999;
+}
